--- a/flickr-api-handler.html
+++ b/flickr-api-handler.html
@@ -1,6 +1,5 @@
 <link rel="import" href="../polymer/polymer-element.html">
 <link rel="import" href="../iron-ajax/iron-ajax.html">
-<link rel="import" href="../iron-scroll-threshold/iron-scroll-threshold.html">
 
 
 <dom-module id="flickr-api-handler">
@@ -13,8 +12,7 @@
 
     <iron-ajax id="ajax"
                loading="{{loading}}"
-               handle-as="text"
-               on-response="_didReceiveResponse">
+               handle-as="text">
     </iron-ajax>
 
   </template>
@@ -34,91 +32,59 @@
       static get properties() {
         return {
           api_key: {
-            type: String,
-            value: 'c304f1096a06486d3c1e7ab271bf7f3f'
+            type: String
+            // value: 'c304f1096a06486d3c1e7ab271bf7f3f'
           },
 
-          user: {
-            type: String,
-            value: '142203852@N04'
-          },
-
-					photos: {
-						type: Array,
-						value: function() {
-							return [];
-						}
-
-					},
-
-					gallery: {
-						type: String,
-						value: null
-					},
-
-					page: {
-						type: Number,
-						value: 0,
-					},
-
-					perPage: {
-						type: Number,
-						value: 16
-					},
-
-					totalPages: {
-						type: Number,
-						value: 1
-					},
-
-          loading: Boolean
+          loading: Boolean,
+          response: {
+            type: Object
+          }
         };
       }
 
-      _getAPIEndpoint(api_key, user, page) {
-        return 'https://api.flickr.com/services/rest/?method=flickr.photos.search' +
-            '&api_key=' + api_key +
-            '&safe_search=1&sort=interestingness-desc'+
-            '&user_id=' + user +
-            '&page=' + page +
-            '&format=json' +
-            '&per_page=' + this.perPage;
-      }
+      _getAPIEndpoint(method, api_key) {
 
-
-      _didReceiveResponse(e) {
-        var payload = JSON.parse(e.detail.response.match('jsonFlickrApi\\((.*)\\)')[1]);
-
-        if (!payload || !payload.photos || !payload.photos.photo) {
+        if (!method || !api_key) {
           return;
         }
 
-				this.totalPages = payload.photos.pages;
-
-        payload.photos.photo.forEach(function(photo) {
-          this.push('photos', photo);
-        }, this);
+        return 'https://api.flickr.com/services/rest/?method=' + method
+                + '&api_key=' + api_key;
 
       }
 
+      // _didReceiveResponse(e) {
+      //   var payload = JSON.parse(e.detail.response.match('jsonFlickrApi\\((.*)\\)')[1]);
+      //
+      //   if (!payload) {
+      //     return;
+      //   }
+      //
+      //   else {
+      //
+      //   }
+      //
+      // }
 
-      _loadMore() {
-        // console.log(this.loading)
+
+      _makeRequest(method, parameters) {
         if (this.loading) {
           return;
         }
+        var ajax = this.$.ajax;
+        ajax.url=this._getAPIEndpoint(method, this.api_key);
+        ajax.params = parameters;
 
-				if (this.page < this.totalPages) {
-					this.page++;
-        	this.$.ajax.url=this._getAPIEndpoint(this.api_key, this.user, this.page);
-        	this.$.ajax.generateRequest();
-				}
-        // else {
-        //   console.log('too many pages ' + this.page + ' / ' + this.totalPages);
-        // }
+        console.log(responseURL);
+        var a = {};
+        Promise.resolve(ajax.generateRequest().completes)
+          .then(
+            function (request) {
+              a = JSON.parse(request.response.match('jsonFlickrApi\\((.*)\\)')[1]);
+            });
 
-        // console.log(this.photos);
-
+        return a;
       }
     }
 
