--- a/flickr-api-handler.html
+++ b/flickr-api-handler.html
@@ -11,8 +11,10 @@
     </style>
 
     <iron-ajax id="ajax"
+               handle-as="text"
                loading="{{loading}}"
-               handle-as="text">
+               last-response="{{ajaxResponse}}"
+               on-response="{{onResponse}}"
     </iron-ajax>
 
   </template>
@@ -35,12 +37,25 @@
             type: String
             // value: 'c304f1096a06486d3c1e7ab271bf7f3f'
           },
-
           loading: Boolean,
-          response: {
-            type: Object
+          onResponse: {
+            type: Object,
+            observer: '_onResponseChanged()'
+          },
+          previousResponse: {
+            type: Array,
+            value: []
           }
         };
+      }
+
+      _onResponseChanged(newValue, oldValue) {
+
+        if (!(newValue)) {
+          newValue = function(){};
+        }
+
+        this.push('previousResponse', oldValue);
       }
 
       _getAPIEndpoint(method, api_key) {
@@ -54,37 +69,40 @@
 
       }
 
-      // _didReceiveResponse(e) {
-      //   var payload = JSON.parse(e.detail.response.match('jsonFlickrApi\\((.*)\\)')[1]);
-      //
-      //   if (!payload) {
-      //     return;
-      //   }
-      //
-      //   else {
-      //
-      //   }
-      //
-      // }
-
-
       _makeRequest(method, parameters) {
-        if (this.loading) {
-          return;
-        }
-        var ajax = this.$.ajax;
+        var ajax = this.$.ironAjax;
         ajax.url=this._getAPIEndpoint(method, this.api_key);
         ajax.params = parameters;
+        this.onResponse = function(){};
+        ajax.generateRequest();
+      }
 
-        console.log(responseURL);
-        var a = {};
-        Promise.resolve(ajax.generateRequest().completes)
-          .then(
-            function (request) {
-              a = JSON.parse(request.response.match('jsonFlickrApi\\((.*)\\)')[1]);
-            });
+      _makeRequest(method, parameters, responseFunction) {
+        var ajax = this.$.ironAjax;
+        ajax.url=this._getAPIEndpoint(method, this.api_key);
+        ajax.params = parameters;
+        this.onResponse = responseFunction;
+        ajax.generateRequest();
+      }
 
-        return a;
+      async _makeRequestAsync(method, parameters) {
+        var ajax = this.$.ajax;
+
+        ajax.url = this._getAPIEndpoint(method, this.api_key);
+        ajax.params = parameters;
+        ajax.onResponse = function(){};
+        let payload = await (ajax.generateRequest());
+        return payload;
+      }
+
+      async _makeRequestAsync(method, parameters, responseFunction) {
+        var ajax = this.$.ajax;
+
+        ajax.url = this._getAPIEndpoint(method, this.api_key);
+        ajax.params = parameters;
+        ajax.onResponse = responseFunction;
+        let payload = await (ajax.generateRequest());
+        return payload;
       }
     }
 
