Started work on a new demo element

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
     <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
     <link rel="import" href="../flickr-api-handler.html">
-
+    <link rel="import" href="example-element.html"
     <custom-style>
       <style is="custom-style" include="demo-pages-shared-styles">
       </style>
@@ -22,17 +22,13 @@
       <h3>Basic flickr-api-handler demo</h3>
       <demo-snippet>
         <template>
-          <flickr-api-handler id='handles' api_key='c304f1096a06486d3c1e7ab271bf7f3f'>
-          </flickr-api-handler>
+          <example-element>
+          </example-element>
 
         </template>
         <script>
         document.addEventListener("DOMContentLoaded", function() {
-          var handler = document.querySelector('#handles');
-          var method ='flickr.photos.search';
-          var params  = {"user_id":'158128259@N08', 'format':'json'};
-          
-          console.log(handler._makeRequest(method, params));
+
         });
 
         </script>
