--- a/flickr-api-handler.html
+++ b/flickr-api-handler.html
@@ -14,7 +14,7 @@
                handle-as="text"
                loading="{{loading}}"
                last-response="{{ajaxResponse}}"
-               on-response="{{onResponse}}"
+               on-response$="{{onResponse}}">
     </iron-ajax>
 
   </template>
@@ -34,13 +34,14 @@
       static get properties() {
         return {
           api_key: {
-            type: String
-            // value: 'c304f1096a06486d3c1e7ab271bf7f3f'
+            type: String,
+            value: 'c304f1096a06486d3c1e7ab271bf7f3f'
           },
           loading: Boolean,
           onResponse: {
             type: Object,
-            observer: '_onResponseChanged()'
+            value() {return (e)=>{console.log('000');}},
+            observer: '_onResponseChanged'
           },
           previousResponse: {
             type: Array,
@@ -50,12 +51,12 @@
       }
 
       _onResponseChanged(newValue, oldValue) {
-
-        if (!(newValue)) {
-          newValue = function(){};
-        }
-
-        this.push('previousResponse', oldValue);
+        console.log('responseChanged');
+        // if (!(newValue)) {
+        //   newValue = function(){};
+        // }
+        //
+        // this.push('previousResponse', oldValue);
       }
 
       _getAPIEndpoint(method, api_key) {
@@ -70,7 +71,8 @@
       }
 
       _makeRequest(method, parameters) {
-        var ajax = this.$.ironAjax;
+        var ajax = this.$.ajax;
+
         ajax.url=this._getAPIEndpoint(method, this.api_key);
         ajax.params = parameters;
         this.onResponse = function(){};
@@ -78,7 +80,8 @@
       }
 
       _makeRequest(method, parameters, responseFunction) {
-        var ajax = this.$.ironAjax;
+        var ajax = this.$.ajax;
+
         ajax.url=this._getAPIEndpoint(method, this.api_key);
         ajax.params = parameters;
         this.onResponse = responseFunction;
